connectivity/manifests/allow-all-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: cilium-test
  name: allow-all-egress
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - {}
