connectivity/manifests/client-egress-to-echo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: cilium-test
  name: client-egress-to-echo
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cilium-test
        k8s:kind: echo
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toCIDR:
    - 169.254.0.0/16
    - fd00::/8
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEntities:
    - host
