connectivity/manifests/envoy-ingress-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ingress
  namespace: cilium-test
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: my-ingress
  namespace: cilium-test
subsets:
  - addresses:
      # Dummy IP, never used but required for now
      - ip: 192.192.192.192
    ports:
      - port: 8080
---
apiVersion: cilium.io/v2alpha1
kind: CiliumEnvoyConfig
metadata:
  name: envoy-ingress-listener
spec:
  services:
  - name: my-ingress
    namespace: cilium-test
  backendServices:
  - name: echo-other-node
    namespace: cilium-test
  - name: echo-same-node
    namespace: cilium-test
  resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: envoy-ingress-listener
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: envoy-ingress-listener
          rds:
            route_config_name: ingress_route
          http_filters:
          - name: envoy.filters.http.router
  - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    name: ingress_route
    virtual_hosts:
    - name: "ingress_route"
      domains: ["*"]
      routes:
      - match:
          prefix: "/"
        route:
          weighted_clusters:
            clusters:
            - name: "cilium-test/echo-same-node"
              weight: 50
            - name: "cilium-test/echo-other-node"
              weight: 50
          retry_policy:
            retry_on: 5xx
            num_retries: 3
            per_try_timeout: 1s
          regex_rewrite:
            pattern:
              google_re2: {}
              regex: "^/foo.*$"
            substitution: "/"
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: "cilium-test/echo-same-node"
    connect_timeout: 5s
    lb_policy: ROUND_ROBIN
    type: EDS
    outlier_detection:
      split_external_local_origin_errors: true
      consecutive_local_origin_failure: 2
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: "cilium-test/echo-other-node"
    connect_timeout: 3s
    lb_policy: ROUND_ROBIN
    type: EDS
    outlier_detection:
      split_external_local_origin_errors: true
      consecutive_local_origin_failure: 2
