connectivity/manifests/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2
  namespace: cilium-test
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo-same-node
            port:
              number: 80
        path: /private
        pathType: Exact
      - backend:
          service:
            name: echo-same-node
            port:
              number: 80
        path: /
        pathType: Prefix
